# Rinasensev2

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
Apps/: README.md
components/Ipcp/: CMakeLists.txt  IPCP_ops.c  IPCP_task.c
components/Ipcp/Modules/: CMakeLists.txt  delim.c  dtp.c  du.c  efcp.c  enrollment.c  flowAllocator.c  pci.c  rib.c  ribd.c  rmt.c  serdesMsg.c
components/Ipcp/Modules/include/: du.h  efcp.h  efcpStructures.h  enrollment_api.h  flowAllocator.h  pci.h  ribd.h  ribd_api.h  rmt.h
components/Ipcp/include/: IPCP_api.h  IPCP_events.h  IPCP_normal_api.h
components/Portability/linux/: CMakeLists.txt
components/Rina-api/: CMakeLists.txt  rina_api.c
components/Rina-api/include/: rina_api.h  rina_api_flows.h
components/Rina-manager/: CMakeLists.txt  IPCP_manager.c
components/Rina-manager/BufferManagement/: BufferManagement.c  CMakeLists.txt
components/Rina-manager/BufferManagement/include/: BufferManagement.h
components/Rina-manager/Common/: CMakeLists.txt  common.c  hashtab.c  rina_gpha.c  rina_timer.c
components/Rina-manager/Common/include/common/: mac.h  rina_buffers.h  rina_common.h  rina_common_port.h  rina_gpha.h  rina_ids.h  rina_timer.h
components/Rina-manager/configRINA/: configRINA.c
components/Rina-manager/configRINA/include/: configRINA.h
components/Rina-manager/configSensor/include/: configSensor.h
components/Rina-manager/include/: IPCP_instance.h  IPCP_manager.h
components/Shim/: CMakeLists.txt  shim.c  shim_IPCP_flow.c
components/Shim/Arp826/: Arp826.c
components/Shim/Arp826/include/: Arp826.h
components/Shim/NetworkInterface/: CMakeLists.txt
components/Shim/NetworkInterface/esp32/: NetworkInterface.c
components/Shim/NetworkInterface/linux_tap/: NetworkInterface.c
components/Shim/NetworkInterface/mq/: NetworkInterface.c
components/Shim/WiFi/: CMakeLists.txt  wifi_IPCP.c  wifi_IPCP_ethernet.c  wifi_IPCP_ops.c
components/Shim/WiFi/include/: wifi_IPCP.h  wifi_IPCP_ethernet.h  wifi_IPCP_events.h  wifi_IPCP_frames.h
components/Shim/ieee802154/: CMakeLists.txt  ieee802154_IPCP_frame.c  ieee802154_IPCP_ops.c  ieee802154_NetworkInterface.c
components/Shim/ieee802154/include/: ieee802154_IPCP.h  ieee802154_NetworkInterface.h  ieee802154_frame.h
components/Shim/include/: shim.h  shim_IPCP_events.h  shim_IPCP_flows.h
config/: README.md
main/: CMakeLists.txt  main._test_old.c  main.c  main_old.c  main_testing.c
