idf_component_register(SRCS "flowAllocator.c" "rmt.c" "enrollment.c" "connection.c"
    "delim.c"
    "dtp.c"
    "du.c"
    "Efcp.c"
    "Enrollment.c"
    "FlowAllocator.c"
    "normalIPCP.c"
    "pci.c"
    "Rib.c"
    "Ribd.c"
    "Rmt.c"
    "SerdesMsg.c"
    INCLUDE_DIRS "include"
    REQUIRES CdapProto Rina-manager Rina-api)